Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNbHAEdhX8iMu82SvIOMhhR",
+      "authorship_tag": "ABX9TyPMadY5lfy0mKmvH9p9FwPr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7583,7 +7583,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "55597115-b29c-459f-e672-c25183617581"
+        "outputId": "c943b0a7-deb8-4e3d-927f-cb1b5e10d79f"
       },
       "source": [
         "%%writefile arrayint01.cpp\n",
@@ -7602,12 +7602,12 @@
         "    std::cout << *(p + 5) << \"\\n\"; // 0\n",
         "}"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Overwriting arrayint01.cpp\n"
+            "Writing arrayint01.cpp\n"
           ],
           "name": "stdout"
         }
@@ -7620,12 +7620,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e9a12e59-0d25-4add-9eae-635f4a5043e4"
+        "outputId": "9e1504ca-a62d-4cfc-ef9c-cf26a469e8af"
       },
       "source": [
         "!g++ arrayint01.cpp -o arrayint01; ./arrayint01"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -7752,34 +7752,39 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d6d97b7f-041e-47b3-b9a1-378351bc005c"
+        "outputId": "0c0821d3-2bd7-482d-b666-b78bb184691f"
       },
       "source": [
+        "# 実験 // がarray version で これは vector version\n",
         "%%writefile arrayint03.cpp\n",
         "\n",
         "#include <iostream>\n",
+        "#include <vector>\n",
         "\n",
-        "void PrintArray(const int* x, std::size_t num) {\n",
+        "// void PrintArray(const int* x, std::size_t num) {\n",
+        "void PrintArray(std::vector<int> x, std::size_t num) {\n",
         "    for (std::size_t i = 0; i < num; ++i) {\n",
         "        std::cout << x[i] << std::endl;\n",
         "    }\n",
         "}\n",
         "\n",
         "int main() {\n",
-        "    constexpr std::size_t num = 5;\n",
-        "    int x[num] = {0, 1, 2, 3, 4};\n",
+        "    // constexpr std::size_t num = 5;\n",
+        "    // int x[num] = {0, 1, 2, 3, 4};\n",
+        "    std::vector<int>  x = {0, 1, 2, 3, 4};\n",
         "\n",
-        "    PrintArray(x, num);\n",
+        "    // PrintArray(x, num);\n",
+        "    PrintArray(x, x.size());\n",
         "\n",
         "    return 0;\n",
         "}\n"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Writing arrayint03.cpp\n"
+            "Overwriting arrayint03.cpp\n"
           ],
           "name": "stdout"
         }
@@ -7792,12 +7797,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b91df54b-8cbd-4588-aa83-f9473ffc094a"
+        "outputId": "a7b3968e-6bca-46b7-df58-4294441bff8f"
       },
       "source": [
         "!g++ arrayint03.cpp -o arrayint03; ./arrayint03"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -11517,7 +11522,7 @@
         "    return 0;\n",
         "}"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11540,7 +11545,7 @@
       "source": [
         "!g++ staticassert.cpp -o staticassert; ./staticassert"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
