Colaboratory を使用して作成しました

--- a/learnreact.ipynb
+++ b/learnreact.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "learnreact.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNsW42AzhrSDaX73XQbiQ7E",
+      "authorship_tag": "ABX9TyPaU71tJt1miS+XQN38Kmdf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,83 +25,64 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "id": "HfVDGjCckZxG",
-        "colab_type": "text"
+        "id": "9cHFD0Xldq0i"
       },
       "source": [
-        "# メモ\n",
-        "\n",
-        "`Colab`で`React`を学ぶ。colabにreactは関係ないが、ノートとして使う。\n",
-        "\n",
-        "`dotinstall`のReact入門を読んでいる。\n",
-        "\n",
-        "React + JSXとする。TypeScriptはやらない。\n"
-      ]
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "DRLABvx2ExP9",
-        "colab_type": "text"
+        "id": "qAPxvjcRdtlo"
       },
       "source": [
-        "React は Facebook が中心に開発した JavaScript のライブラリー。\n",
+        "# メモ\n",
+        "colab の環境で %%html で react を勉強する、というアイデア。\n",
         "\n",
-        "公式サイトは `reactjs.org` \n",
+        "cdn で使えるかどうか => つかえない。\n",
         "\n",
-        "html で次のように呼び出して使う。 Colab のコードセルではなく、別途ファイルにして、ブラウザーで読み込んで使う。\n"
+        "getElementById は使える。\n",
+        "\n",
+        "colab の環境に npm で react をインストールできれば使えるかもしれない。"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vM8wF89xkXYY",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 17
+          "height": 46
         },
-        "outputId": "1d0270bf-60b0-4f18-d943-5c2dd161bd14"
+        "id": "A7O8qQ0DeBPq",
+        "outputId": "0939112f-e7d7-4053-f1bb-10963d18ba26"
       },
       "source": [
-        "<head>\n",
-        "<script src=\"https://unpkg.com/react@16/umd/react.development.js\"></script>\n",
-        "<script src=\"https://unpkg.com/react-dom@16/umd/react-dom.development.js\"></script>\n",
-        "<script src=\"https://unpkg.com/@babel/standalone/babel.min.js\"></script>\n",
-        "</head>\n",
-        "<body>\n",
-        "    <div id=\"root\"></div>\n",
-        "<script type=\"text/babel\">\n",
-        "      ReactDOM.render(\n",
-        "        <h1>Hello, world!</h1>,\n",
-        "        document.getElementById('root')\n",
-        "      );\n",
-        "</script>\n",
-        "</body>"
+        "# 実験  getElementById は使える。\n",
+        "%%html\n",
+        "  <body>\n",
+        "    <p id=\"text\"></p>\n",
+        "    <script>\n",
+        "      document.getElementById(\"text\").innerHTML = \"こんにちは！\";\n",
+        "    </script>\n",
+        "  </body>"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
-              "\n",
-              "<head>\n",
-              "<script src=\"https://unpkg.com/react@16/umd/react.development.js\"></script>\n",
-              "<script src=\"https://unpkg.com/react-dom@16/umd/react-dom.development.js\"></script>\n",
-              "<script src=\"https://unpkg.com/@babel/standalone/babel.min.js\"></script>\n",
-              "</head>\n",
-              "<body>\n",
-              "    <div id=\"root\"></div>\n",
-              "<script type=\"text/babel\">\n",
-              "      ReactDOM.render(\n",
-              "        <h1>Hello, world!</h1>,\n",
-              "        document.getElementById('root')\n",
-              "      );\n",
-              "</script>\n",
-              "</body>"
+              "  <body>\n",
+              "    <p id=\"text\"></p>\n",
+              "    <script>\n",
+              "      document.getElementById(\"text\").innerHTML = \"こんにちは！\";\n",
+              "    </script>\n",
+              "  </body>"
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
@@ -114,63 +95,54 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "id": "8r2h_od1bzOS",
-        "colab_type": "text"
+        "id": "sWSM8UwGZN8c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 75
+        },
+        "outputId": "2a13e0d4-ef1c-4b0f-8d0a-1747bdcab5e1"
       },
       "source": [
-        "React Developer Tools という google chrome の拡張機能\n",
-        "入れたら、拡張機能の管理で、ファイルの URL へのアクセスを許可する。  \n",
-        "html に、reactjs.org から 3行コピーして、ヘッダーに入れている。\n",
-        "\n",
-        "```\n",
-        "docs -> installation -> try react -> download this html file\n",
-        "```\n",
-        "\n",
-        "\n",
-        "上記のセルでは script の中に直接 ReactDOM.render(); としているが、ドットインストールではこれをさらに javascript のアロー関数式で囲んでいる。\n",
-        "\n",
-        "あと、どの辺が jsx なのか。 jsx 使わなければ、babel が必要ないとはどういうことか。\n"
+        "# 実験\n",
+        "%%html\n",
+        "<div id=\"root\"></div>\n",
+        "<script>\n",
+        "document.getElementById(\"root\").innerHTML = \"<h1>ハロー</h1>\";\n",
+        "</script>\n"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "    <div id=\"root\"></div>\n",
+              "<script>\n",
+              "document.getElementById(\"root\").innerHTML = \"<h1>ハロー</h1>\";\n",
+              "</script>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_wyz0PjKdyx-",
-        "colab_type": "code",
-        "colab": {}
+        "id": "1XiuwGC5egvM"
       },
       "source": [
-        "(() => {\n",
-        "  ReactDOM.render(\n",
-        "    <p>Hello!</p>,\n",
-        "    document.getElementById('root')\n",
-        "  );\n",
-        "})();"
+        ""
       ],
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "WbobhMbndXAO",
-        "colab_type": "text"
-      },
-      "source": [
-        ""
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "d5CgAq3xbTLF",
-        "colab_type": "text"
-      },
-      "source": [
-        ""
-      ]
     }
   ]
 }
