Colaboratory を使用して作成しました

--- a/learnjavascript.ipynb
+++ b/learnjavascript.ipynb
@@ -3,10 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "learnjavascript.ipynb ",
+      "name": "learnjavascript.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyME1jFQTNZH0nmN5x83FGh3",
+      "authorship_tag": "ABX9TyO4+tObnrU80U2zH0VzXH9+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
         "id": "cG6xXZZ1h0LB"
       },
       "source": [
-        "# はじめに、というか\n",
+        "# はじめに、というか lll\n",
         "Colab でJavaScript のを使うには 3 通りのやり方がある、と思う。\n",
         "\n",
         "1. %%javascript セルマジックを使う。\n",
