Colaboratory を使用して作成しました

--- a/learnjavascript.ipynb
+++ b/learnjavascript.ipynb
@@ -6,7 +6,7 @@
       "name": "learnjavascript.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMCuXwXcgvqMSU+Ub8yoJz1",
+      "authorship_tag": "ABX9TyPyVpcC70mOeJMPdfNVfypF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -154,7 +154,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 79
         },
-        "outputId": "0a7f44e2-8f30-4269-d6f4-40ad9b12cb83"
+        "outputId": "0eb9070a-22b8-4614-a41e-b66f5d2dde04"
       },
       "source": [
         "%%html\n",
@@ -166,7 +166,7 @@
         "    para.textContent = \"ハロー html!!!!\"\n",
         "</script>\n"
       ],
-      "execution_count": null,
+      "execution_count": 102,
       "outputs": [
         {
           "output_type": "display_data",
@@ -210,7 +210,7 @@
         "outputId": "b58c0493-f7ba-4e09-d3e5-2029645eefb0"
       },
       "source": [
-        "# 実験\n",
+        "# 実験 createElement\n",
         "%%html\n",
         "<h1>見出し</h1>\n",
         "<script>\n",
@@ -303,7 +303,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 56
         },
-        "outputId": "a4f3069c-18f9-4ca5-8de9-ff691241b345"
+        "outputId": "34d8cc82-5369-4a3a-d088-d6baa30aaf3e"
       },
       "source": [
         "%%html\n",
@@ -324,7 +324,7 @@
         "}</style>\n",
         "<p>Player 1: Chris</p>"
       ],
-      "execution_count": null,
+      "execution_count": 104,
       "outputs": [
         {
           "output_type": "display_data",
@@ -619,11 +619,9 @@
       "source": [
         "オッケー!!!! 動いたね!!!!\n",
         "```\n",
-        "document.addEventListener(\"DOMContentLoaded\", function() {\n",
-        "  ...\n",
-        "});\n",
+        "document.addEventListener(\"DOMContentLoaded\", function() {});\n",
         "```\n",
-        "が使えないだけみたい。\n",
+        "が使えない。\n",
         "\n",
         "これは、htmlのbodyが完全に読み込まれてから発動するよ!!!!ということらしくて、たぶん colab の環境では意味がないのだろう。"
       ]
@@ -1057,12 +1055,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bsZjjagqqWbj",
-        "outputId": "53009709-eefe-4279-df29-d3b935b6e1de",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 59
-        }
+        },
+        "id": "bsZjjagqqWbj",
+        "outputId": "53009709-eefe-4279-df29-d3b935b6e1de"
       },
       "source": [
         "# 実験\n",
