Colaboratory を使用して作成しました

--- a/functionaljavascript.ipynb
+++ b/functionaljavascript.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "functionaljavascript.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOfG27rIR/m1Ktzh2NQ1E6+",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNDgCumfaWK9BaL91lx2MCV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,23 +51,105 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Sn3lW5hgzIrq"
+      },
+      "source": [
+        "# バッククオート backquote\n",
+        "テンプレートリテラルは、組み込み式を扱うことができる文字列リテラルです。複数行の文字列や文字列挿入機能を使用することができます。"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "oOdKsxqyAX2E"
+        "id": "oOdKsxqyAX2E",
+        "outputId": "abe2819c-928d-4988-b1f5-b32e3541dbbc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 69
+        }
       },
       "source": [
         "%%html\n",
         "<script>\n",
         "    function executeFunctions(x, y) {\n",
-        "   const add = (x, y) => x + y;\n",
-        "   const subtract = (x, y) => x — y;\n",
-        "   console.log(`sum: ${add(x,y)}`);\n",
-        "   console.log(`difference: ${subtract(x,y)}`);\n",
-        "}\n",
-        "    </script>"
+        "        const add = (x, y) => x + y;\n",
+        "        const subtract = (x, y) => x - y;\n",
+        "        addPara(`sum: ${add(x, y)}`);\n",
+        "        addPara(`difference: ${subtract(x, y)}`);\n",
+        "    }\n",
+        "    function addPara(item) {\n",
+        "        let para = document.createElement('p');\n",
+        "        para.textContent = item;\n",
+        "        document.body.appendChild(para);\n",
+        "    }\n",
+        "\n",
+        "    executeFunctions(3, 4)\n",
+        "</script>"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<script>\n",
+              "    function executeFunctions(x, y) {\n",
+              "        const add = (x, y) => x + y;\n",
+              "        const subtract = (x, y) => x - y;\n",
+              "        addPara(`sum: ${add(x, y)}`);\n",
+              "        addPara(`difference: ${subtract(x, y)}`);\n",
+              "    }\n",
+              "    function addPara(item) {\n",
+              "        let para = document.createElement('p');\n",
+              "        para.textContent = item;\n",
+              "        document.body.appendChild(para);\n",
+              "    }\n",
+              "\n",
+              "    executeFunctions(3, 4)\n",
+              "</script>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xHPwYxUbzctk"
+      },
+      "source": [
+        "# 構文\n",
+        "%%script false\n",
+        "\n",
+        "`string text`\n",
+        "\n",
+        "`string text line 1\n",
+        " string text line 2`\n",
+        "\n",
+        "`string text ${expression} string text`\n",
+        "\n",
+        "tag`string text ${expression} string text`\n"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-gRW6dVK6SX6"
+      },
+      "source": [
+        "javascript backquote\n",
+        "で検索して云々。"
+      ]
     }
   ]
 }
