Colaboratory を使用して作成しました

--- a/learnhtml.ipynb
+++ b/learnhtml.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhtml.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMd/yHNqnE3k/EoQUnCAZX3",
+      "authorship_tag": "ABX9TyMoeaAyEOUyr3D+4/kqk3mP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,7 +74,7 @@
         "地の文\n",
         "地の文2"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -127,7 +127,7 @@
         "/* コメント4 */\n",
         "</script>"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -187,7 +187,7 @@
         "地の文\n",
         "<div>地の文</div>"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -228,7 +228,11 @@
       },
       "source": [
         "# CDN\n",
-        "cdn(Content Delivery Network) を使うのはできないみたい。 できるのかもしれないが成功していない。 従って、cdn 経由で jquery、react、などは使えない。"
+        "cdn(Content Delivery Network) を使うのはできないみたい。 できるのかもしれないが成功していない。 従って、cdn 経由で jquery、react、などは使えない。\n",
+        "\n",
+        "CDN だけでなく、`<title></title>` とか普通に `<head></head>` に入るものは使えない。\n",
+        "\n",
+        "`<html></html>` の中に書かれるものは全部使えると思う。 従って、この環境では css と html と javascrip が学べる、ということになる。\n"
       ]
     },
     {
@@ -276,7 +280,7 @@
         "    </li>\n",
         "</ol>"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -311,6 +315,151 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "o3bLl_XF0pzW",
+        "outputId": "c5f8dd5d-4e98-44c5-887f-185615aba57d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 64
+        }
+      },
+      "source": [
+        "# 太文字\n",
+        "%%html\n",
+        "<p>My cat is <strong>very grumpy.</p>とか</strong>"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<p>My cat is <strong>very grumpy.</p>とか</strong>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1fgxkKFL1Uyb",
+        "outputId": "ae240c8f-944f-45a6-da41-664d4f26a689",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 162
+        }
+      },
+      "source": [
+        "# ブロック要素とインライン要素\n",
+        "%%html\n",
+        "<em>first</em><em>second</em><em>third</em>\n",
+        "<p>fourth</p><p>fifth</p><p>sixth</p>\n",
+        "<div>fourth</div><div>fifth</div><div>sixth</div>\n"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<em>first</em><em>second</em><em>third</em>\n",
+              "<p>fourth</p><p>fifth</p><p>sixth</p>\n",
+              "<div>fourth</div><div>fifth</div><div>sixth</div>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eS5B0LXA2K4w",
+        "outputId": "2c102454-ad6d-4b3c-c259-e77e2fbf3a9c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 120
+        }
+      },
+      "source": [
+        "# 画像の挿入\n",
+        "%%html\n",
+        "<img src=\"https://raw.githubusercontent.com/mdn/beginner-html-site/gh-pages/images/firefox-icon.png\" width=\"100\">\n"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<img src=\"https://raw.githubusercontent.com/mdn/beginner-html-site/gh-pages/images/firefox-icon.png\" width=\"100\">"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qLdb4Wa025e4",
+        "outputId": "1e135ff6-a027-4524-c6a4-91a8c8ee7400",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 46
+        }
+      },
+      "source": [
+        "# リンク <a> はハイパーリンク要素\n",
+        "%%html\n",
+        "<p>A link to my <a href=\"https://www.mozilla.org/\" title=\"The Mozilla homepage\" target=\"_blank\">favourite website</a>.</p>"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<p>A link to my <a href=\"https://www.mozilla.org/\" title=\"The Mozilla homepage\" target=\"_blank\">favourite website</a>.</p>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7JUnTj-Z2KJg"
+      },
+      "source": [
+        ""
       ]
     },
     {
