Colaboratory を使用して作成しました

--- a/learnhtml.ipynb
+++ b/learnhtml.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhtml.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMoeaAyEOUyr3D+4/kqk3mP",
+      "authorship_tag": "ABX9TyMkgHeKIldo/gTD7bpZ8BcR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,8 +37,9 @@
         "1. セルマジックの %%html を使う。\n",
         "1. 実験しながら進むので、読む人もそうして欲しい。\n",
         "1. 参考サイト  \n",
+        "https://developer.mozilla.org/ja/docs/Learn/HTML/Introduction_to_HTML/Getting_started  \n",
         "https://www.w3schools.com/html/  \n",
-        "https://developer.mozilla.org/ja/docs/Learn/HTML\n"
+        "\n"
       ]
     },
     {
@@ -321,18 +322,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "o3bLl_XF0pzW",
-        "outputId": "c5f8dd5d-4e98-44c5-887f-185615aba57d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 64
-        }
+        },
+        "outputId": "c5f8dd5d-4e98-44c5-887f-185615aba57d"
       },
       "source": [
         "# 太文字\n",
         "%%html\n",
         "<p>My cat is <strong>very grumpy.</p>とか</strong>"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -354,11 +355,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "1fgxkKFL1Uyb",
-        "outputId": "ae240c8f-944f-45a6-da41-664d4f26a689",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 162
-        }
+        },
+        "outputId": "ae240c8f-944f-45a6-da41-664d4f26a689"
       },
       "source": [
         "# ブロック要素とインライン要素\n",
@@ -367,7 +368,7 @@
         "<p>fourth</p><p>fifth</p><p>sixth</p>\n",
         "<div>fourth</div><div>fifth</div><div>sixth</div>\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -391,18 +392,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "eS5B0LXA2K4w",
-        "outputId": "2c102454-ad6d-4b3c-c259-e77e2fbf3a9c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 120
-        }
+        },
+        "outputId": "2c102454-ad6d-4b3c-c259-e77e2fbf3a9c"
       },
       "source": [
         "# 画像の挿入\n",
         "%%html\n",
         "<img src=\"https://raw.githubusercontent.com/mdn/beginner-html-site/gh-pages/images/firefox-icon.png\" width=\"100\">\n"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -424,18 +425,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "qLdb4Wa025e4",
-        "outputId": "1e135ff6-a027-4524-c6a4-91a8c8ee7400",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 46
-        }
+        },
+        "outputId": "1e135ff6-a027-4524-c6a4-91a8c8ee7400"
       },
       "source": [
         "# リンク <a> はハイパーリンク要素\n",
         "%%html\n",
         "<p>A link to my <a href=\"https://www.mozilla.org/\" title=\"The Mozilla homepage\" target=\"_blank\">favourite website</a>.</p>"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
