--- a/learnhtml.ipynb
+++ b/learnhtml.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhtml.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO6pDDLrxUXy7UyJgZMp+lM",
+      "authorship_tag": "ABX9TyO7PkQQIhvl2WpDKtn6LYKZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3366,7 +3366,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "AO7Kp7IuCHYA",
-        "outputId": "08606022-abaa-4292-e1f2-cc55b7db9d30",
         "colab": {
           "resources": {
             "http://localhost:8080/images/dinosaur.jpg": {
@@ -3388,7 +3387,8 @@
           },
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "08606022-abaa-4292-e1f2-cc55b7db9d30"
       },
       "source": [
         "%%html\n",
@@ -3396,7 +3396,7 @@
         "<img src=\"images/dinosaur.jpg\"\n",
         "     alt=\"恐竜の画像がはいるハズ。ごめん。\">"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3420,11 +3420,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "2btQN2JE4omc",
-        "outputId": "b7264b3b-e442-4837-edc0-ed3e0083a106",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 191
-        }
+        },
+        "outputId": "b7264b3b-e442-4837-edc0-ed3e0083a106"
       },
       "source": [
         "%%html\n",
@@ -3435,7 +3435,7 @@
         " height=\"171\"\n",
         " title=\"A T-Rex on display in the Manchester University Museum\">"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3461,7 +3461,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "AUGv-mmY4wz0",
-        "outputId": "80db5d29-8e23-49ce-ad41-a10f2840e8b1",
         "colab": {
           "resources": {
             "http://localhost:8080/images/dinosaur.jpg": {
@@ -3483,7 +3482,8 @@
           },
           "base_uri": "https://localhost:8080/",
           "height": 79
-        }
+        },
+        "outputId": "80db5d29-8e23-49ce-ad41-a10f2840e8b1"
       },
       "source": [
         "%%html\n",
@@ -3498,7 +3498,7 @@
         "  <figcaption>マンチェスター大学博物館に展示されている T-Rex。</figcaption>\n",
         "</figure>"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3529,11 +3529,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "uveOYd1k4wmq",
-        "outputId": "132f0baf-7639-4e4e-e90a-7e8332de0d07",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
-        }
+        },
+        "outputId": "132f0baf-7639-4e4e-e90a-7e8332de0d07"
       },
       "source": [
         "%%html\n",
@@ -3543,7 +3543,7 @@
         "    <figcaption>サッポロ一番(さっぽろいちばんしおらーめん)</figcaption>\n",
         "</figure>"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3568,13 +3568,83 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "W71VuHrV9D1m"
+        "id": "W71VuHrV9D1m",
+        "outputId": "a27923c1-0cca-454c-a594-95750662b375",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 320
+        }
       },
       "source": [
-        ""
+        "%%html\n",
+        "<iframe src=\"https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d51891.663190924686!2d139.80105967163098!3d35.62208193792607!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sja!2sjp!4v1609133463998!5m2!1sja!2sjp\" width=\"400\" height=\"300\" frameborder=\"0\" style=\"border:0;\" allowfullscreen=\"\" aria-hidden=\"false\" tabindex=\"0\"></iframe>\n",
+        "</iframe>"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<iframe src=\"https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d51891.663190924686!2d139.80105967163098!3d35.62208193792607!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sja!2sjp!4v1609133463998!5m2!1sja!2sjp\" width=\"400\" height=\"300\" frameborder=\"0\" style=\"border:0;\" allowfullscreen=\"\" aria-hidden=\"false\" tabindex=\"0\"></iframe>\n",
+              "</iframe>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hq20m-wK3DWl",
+        "outputId": "37974514-da10-4e36-cfe3-2f5bbdaeb482",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 220
+        }
+      },
+      "source": [
+        "%%html\n",
+        "<iframe src=\"https://developer.mozilla.org/en-US/docs/Glossary\"\n",
+        "        width=\"100%\" height=\"200\" frameborder=\"0\"\n",
+        "        allowfullscreen sandbox>\n",
+        "</iframe>"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<iframe src=\"https://developer.mozilla.org/en-US/docs/Glossary\"\n",
+              "        width=\"100%\" height=\"200\" frameborder=\"0\"\n",
+              "        allowfullscreen sandbox>\n",
+              "</iframe>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "urEGGp3T4Wu3"
+      },
+      "source": [
+        "# ベクターグラフィックス\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3582,7 +3652,7 @@
         "id": "aX00Gt8Z2SMp"
       },
       "source": [
-        "https://developer.mozilla.org/ja/docs/Learn/HTML/Multimedia_and_embedding/Other_embedding_technologies"
+        "https://developer.mozilla.org/ja/docs/Learn/HTML/Multimedia_and_embedding/Adding_vector_graphics_to_the_Web"
       ]
     },
     {
