--- a/learnhtml.ipynb
+++ b/learnhtml.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhtml.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO7PkQQIhvl2WpDKtn6LYKZ",
+      "authorship_tag": "ABX9TyO+gbJtw+PnniCfKN/1clFS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3569,18 +3569,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "W71VuHrV9D1m",
-        "outputId": "a27923c1-0cca-454c-a594-95750662b375",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 320
-        }
+        },
+        "outputId": "a27923c1-0cca-454c-a594-95750662b375"
       },
       "source": [
         "%%html\n",
         "<iframe src=\"https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d51891.663190924686!2d139.80105967163098!3d35.62208193792607!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sja!2sjp!4v1609133463998!5m2!1sja!2sjp\" width=\"400\" height=\"300\" frameborder=\"0\" style=\"border:0;\" allowfullscreen=\"\" aria-hidden=\"false\" tabindex=\"0\"></iframe>\n",
         "</iframe>"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3603,11 +3603,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "hq20m-wK3DWl",
-        "outputId": "37974514-da10-4e36-cfe3-2f5bbdaeb482",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 220
-        }
+        },
+        "outputId": "37974514-da10-4e36-cfe3-2f5bbdaeb482"
       },
       "source": [
         "%%html\n",
@@ -3616,7 +3616,7 @@
         "        allowfullscreen sandbox>\n",
         "</iframe>"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3643,7 +3643,50 @@
         "id": "urEGGp3T4Wu3"
       },
       "source": [
-        "# ベクターグラフィックス\n"
+        "# ベクターグラフィック\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "t9L5lO1SH5x5",
+        "outputId": "8f993404-0fcd-44ed-d494-69df0e60a977",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 169
+        }
+      },
+      "source": [
+        "%%html\n",
+        "<svg>\n",
+        "     baseProfile=\"full\"\n",
+        "     width=\"300\" height=\"200\"\n",
+        "  <rect width=\"100%\" height=\"100%\" fill=\"black\" />\n",
+        "  <circle cx=\"150\" cy=\"100\" r=\"90\" fill=\"blue\" />\n",
+        "</svg>"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<svg>\n",
+              "     baseProfile=\"full\"\n",
+              "     width=\"300\" height=\"200\"\n",
+              "  <rect width=\"100%\" height=\"100%\" fill=\"black\" />\n",
+              "  <circle cx=\"150\" cy=\"100\" r=\"90\" fill=\"blue\" />\n",
+              "</svg>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
       ]
     },
     {
